@@ -1,0 +1,13 @@
+// mcpython config file
+VERSION=1.0.0
+PROVIDING_MOD=minecraft
+PROVIDING_MOD_VERSION=(0, 2, 1, 2)
+
+D{
+minecraft:plains -> {
+    L[
+        I10
+        I30
+    ]
+}
+}
