@@ -1,0 +1,65 @@
+// mcpython config file
+VERSION=1.0.0
+PROVIDING_MOD=minecraft
+PROVIDING_MOD_VERSION=(0, 2, 1, 2)
+
+D{
+physics -> {
+    D{
+    gravity -> {
+        I20
+    }
+    terminal_velocity -> {
+        I50
+    }
+    }
+}
+speeds -> {
+    D{
+    walking -> {
+        I5
+    }
+    sprinting -> {
+        I8
+    }
+    flying -> {
+        I15
+    }
+    fly_sprinting -> {
+        I18
+    }
+    gamemode_3 -> {
+        I20
+    }
+    gamemode_3_sprinting -> {
+        I25
+    }
+    }
+}
+timing -> {
+    D{
+    random_tick_range -> {
+        I2
+    }
+    cpu_usage_refresh_time -> {
+        F0.8
+    }
+    }
+}
+rendering -> {
+    D{
+    use_missing_texture_on_missing_faces -> {
+        Bfalse
+    }
+    fog_distance -> {
+        I60
+    }
+    chunk_generation_range -> {
+        I1
+    }
+    write_not_formatted_exceptions -> {
+        Bfalse
+    }
+    }
+}
+}
