@@ -24,3 +24,5 @@ marked for removal in alpha 1.3.0:
     ModLoader._load_from_old_json, ModLoader.load_new_json
     Block.get_provided_slots
     Inventory._get_position
+    config.TICKS_PER_SEC, config.WALKING_SPEED, config.SPRINTING_SPEED, config.FLYING_SPEED,
+        config.FLYING_SPRINTING_SPEED, config.GAMEMODE_3_SPEED, config.GAMEMODE_3_SPRINTING_SPEED, config.PLAYER_HEIGHT
