@@ -172,3 +172,4 @@ issue 183: fence and walls were not updating texture when updating internal stat
 issue 184: exception when writing an exception with an non-str info; fixed on 12.05.2020 by uuk
 issue 186: event "worldgen:chunk:finished" was not called for runtime-like generated chunks; fixed on 13.05.2020 by uuk
 issue 187: exceptions when generating chunks without content from main menu; fixed on 13.05.2020 by uuk
+issue 188: minecraft version tuple could contain strings; fixed on 19.05.2020 by uuk
